# samus-agent-stem

./: .gitignore  README.md  distilled_mcps.json  pyproject.toml  samus_implementation_proposal.md  samus_user_workflow.md
docs/: agent_distillation_guide.md  alita_research_summary.md  samus_implementation_proposal.md
samus/: __init__.py  agent.py  capability_discovery.py  cli.py  config.py  core.py  distillation.py  distilled_agent.py  mcp.py  mcp_codegen.py  mcp_executor.py  models.py  similarity.py
